--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -20,7 +20,11 @@
         
       </ul>
       <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" (input)="searchFlight($event.target.value)" aria-label="Search">
+        
+        <select class="form-control select2">
+          <option *ngFor="let f of filterdata" >{{f.name}}  - {{f.time}}</option> 
+       </select>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         <button *ngIf="!authSrv.isUserLoggedIn()"  class="btn btn-outline-success my-2 my-sm-0" routerLink="/auth/signin">Sign In</button>
         <button *ngIf="!authSrv.isUserLoggedIn()"  class="btn btn-outline-success my-2 my-sm-0" routerLink="/auth/signup">Sign Up</button>
