--- a/src/app/user/update/update.component.html
+++ b/src/app/user/update/update.component.html
@@ -3,7 +3,7 @@
         <label for="">
             First Name: 
             <input type="text" placeholder="Enter First Name" formControlName="firstName">
-            <div *ngIf="f1.firstName.errors" class="error">
+            <div *ngIf="f1.firstName.errors && submitted" class="error">
                 <div *ngIf="f1.firstName.errors.required"> First Name is required</div>
             </div>
         </label><br>
@@ -14,7 +14,7 @@
         <label for="">
             Email: 
             <input type="email" placeholder="Enter Email" formControlName="email">
-            <div *ngIf="updateUserForm.controls.email.errors" class="error">
+            <div *ngIf="updateUserForm.controls.email.errors && submitted" class="error">
                 <div *ngIf="updateUserForm.controls.email.errors.required"> Email is required</div>
                 <div *ngIf="updateUserForm.controls.email.errors.email"> Email should be a valid email</div>
             </div>
@@ -24,7 +24,7 @@
             <label for="">
                 City: 
                 <input type="text" placeholder="Enter City" formControlName="city">
-                <div *ngIf="f2.city.errors" class="error">
+                <div *ngIf="f2.city.errors && submitted" class="error">
                     <div *ngIf="f2.city.errors.required"> City is required</div>
                     <div *ngIf="f2.city.errors.minlength"> Minimum 3 character</div>
                     <div *ngIf="f2.city.errors.maxlength"> Maximum 6 character</div>
