--- a/src/app/user/list/list.component.html
+++ b/src/app/user/list/list.component.html
@@ -39,6 +39,7 @@
                     data-title="Delete"
                     data-toggle="modal"
                     data-target="#delete"
+                    (click) = "deleteUser(user.id)"
                   >
                     delete
                   </button>
